# vistara

./: README.md  diff.txt  diff_utf8.txt  next.config.ts  package-lock.json  package.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
components/: CanvasWrapper.tsx  FocusMode.tsx  PagesBar.tsx  PdfViewer.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
lib/: mediaSink.ts  persistence.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
