[package]
name = "vistara"
version = "0.1.0"
description = "Vistara - Offline-first infinite study canvas"
authors = ["Shikhar"]
license = "MIT"
repository = ""
default-run = "vistara"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vistara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vistara"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
